# BlackCat-ALPHV

./: Cargo.toml  README.md  blackcat_controller.py  build.rs  c2_listener.py  c2_listener_no_save.py  c2_server.py  config.yaml  decrypt_exfiltration.py  decryptor.py  network-config.json  simple_c2.py
.cargo/: config.toml
src/: config.rs  coordinator.rs  crypto.rs  esxi.rs  evasion.rs  exfiltration.rs  filesystem.rs  lateral_movement.rs  linux.rs  main.rs  propagator.rs  ransomware.rs  windows.rs
