[package]
name = "blackcat-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
# Криптография
chacha20 = "0.10"
aes = "0.8"
rsa = "0.9"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# JSON конфигурация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Системные операции
winapi = { version = "0.3", features = ["processthreadsapi", "winbase", "fileapi", "winnt", "handleapi"] }
tokio = { version = "1", features = ["full"] }

# Логирование
log = "0.4"
env_logger = "0.11"

# Утилиты
walkdir = "2"
regex = "1"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
strip = true

