[package]
name = "blackcat-poc"
version = "0.1.0"
edition = "2021"

[features]
default = []
debugapi = []

[dependencies]
tokio = { version = "1.48", features = ["full"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
walkdir = "2.5"
winapi = { version = "0.3", features = ["processthreadsapi", "winbase", "handleapi", "debugapi"] }
widestring = "1.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
