[package]
name = "blackcat-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
walkdir = "2.3"
winapi = { version = "0.3", features = ["processthreadsapi", "winbase", "handleapi", "debugapi"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
hex = "0.4"
clap = { version = "4.3", features = ["derive"] }
chrono = "0.4"
# Важные новые зависимости:
thiserror = "1.0"
ssh2 = "0.9"
local-ip-address = "0.5"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true